[package]
name = "zeox"
description = "A wrapper for the zeit cli tool"
version = "0.2.0"
edition = "2021"
authors = ["Noah <noahbuergler@proton.me"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NQMVD/zeox"
documentation = "https://docs.rs/zeox"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
requestty = "0.5.0"
